<resources>
    <string name="app_name">AwesomeSauceMovies</string>
    <string name="details_label">Movie Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_toast">About</string>
    <string name="action_refresh">Refresh</string>

    <string name="action_share">Share</string>
    <string name="share_subject">Here is an Awesome Trailer!</string>

    <string name="network_not_detected">No network connection detected</string>

    <!--When attributing TMDb, the attribution must be within your application's "About" or "Credits" type section. -->
    <string name="TMDb_notice">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>


    <string name="settings_title">Settings</string>

    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key" translatable="false">sortorder</string>
    <string name="pref_sort_order_default" translatable="false">popular</string>
    <string name="pref_sort_order_favorite" translatable="false">favorite</string>

    <string name="no_favorite_entries">There are no favorite movies to display. To add a favorite, select the Favorite Star on the Movie Details screen.</string>
    <string name="empty_missing_description">There is no description available.</string>

    <string name="detail_image_default_text" translatable="false">Movie Title</string>
    <string name="detail_release_date">Released: </string>
    <string name="detail_popularity">Popularity: </string>
    <string name="detail_vote_average">Average Rating: </string>
    <string name="detail_vote_count">Total Votes: </string>

    <string name="language_setting">en</string>


    <string name="empty_state_no_movie_selected">Select a movie to display the details.</string>


</resources>
