<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/movie_detail_title"
        android:text="@string/detail_image_default_text"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />


    <LinearLayout
        android:id="@+id/detail_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_detail_title"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_detail_poster"
            android:contentDescription="@string/detail_image_default_text"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:layout_margin="20dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_margin="20dp">


            <TextView
                android:id="@+id/movie_label_popularity"
                android:text="@string/detail_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_popularity"
                android:layout_centerInParent="true"
                android:layout_below="@id/movie_label_popularity"
                />



            <TextView
                android:id="@+id/movie_label_vote_average"
                android:text="@string/detail_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@id/movie_popularity"
                android:paddingTop="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_average_vote"
                android:text="@string/detail_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@id/movie_label_vote_average"
                />




            <TextView
                android:id="@+id/movie_label_release_year"
                android:text="@string/detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:layout_below="@id/movie_average_vote"/>

            <TextView
                android:id="@+id/movie_release_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/detail_release_date"
                android:layout_below="@id/movie_label_release_year"/>


        </RelativeLayout>


    </LinearLayout>





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_detail_overview"
            android:text="@string/TMDb_notice"
            android:layout_below="@id/detail_linear_layout"
            android:layout_margin="5dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />




</RelativeLayout>
